# jc

./: .gitignore  .mcp.json  ARCH.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  PLAN-perf.md  PLAN-simplify.md  PLAN.md  README.md  TODO.md  make.sh  rustfmt.toml  status.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
.simplify-state/: deferred.md  worklist.md
crates/jc-app/: Cargo.toml
crates/jc-app/examples/: code_editor_demo.rs
crates/jc-app/src/: app.rs  language.rs  main.rs  outline.rs
crates/jc-app/src/outline_queries/: go.scm
crates/jc-app/src/views/: code_view.rs  diff_view.rs  mod.rs  pane.rs  picker.rs  project_view.rs  todo_view.rs  workspace.rs
crates/jc-core/: Cargo.toml
crates/jc-core/src/: config.rs  lib.rs  theme.rs
crates/jc-terminal/: Cargo.toml
crates/jc-terminal/examples/: terminal_window.rs
crates/jc-terminal/src/: colors.rs  lib.rs  pty.rs  render.rs  view.rs
data/: dark_theme.toml  default_theme.toml  light_theme.toml
docs/: mobile-protocol.md
jc-app/: Cargo.toml  Info.plist
jc-app/examples/: basic_window.rs
jc-app/src/: app.rs  file_watcher.rs  ipc.rs  main.rs  mobile.rs  notify.rs  outline.rs  protocol.rs  qr.rs  tls.rs
jc-app/src/outline_queries/: javascript.scm  typescript.scm
jc-app/src/views/: close_confirm.rs  code_view.rs  comment_panel.rs  diff_view.rs  keybinding_help.rs  mobile_qr.rs  mod.rs  pane.rs  picker.rs  project_state.rs  project_view.rs  reply_view.rs  session_state.rs  todo_view.rs  workspace.rs
jc-app/src/views/workspace/: mod.rs  pickers.rs  problems.rs  render.rs
jc-core/: Cargo.toml
jc-core/examples/: claude_usage.rs
jc-core/src/: claude_api.rs  config.rs  hooks.rs  hooks_settings.rs  lib.rs  model.rs  problem.rs  session.rs  snippets.rs  status_script.rs  theme.rs  todo.rs  usage.rs
jc-mobile/: .gitignore  make.sh
jc-mobile/jc-mobile/: App.swift  ContentView.swift  Info.plist
jc-mobile/jc-mobile.xcodeproj/: project.pbxproj
jc-mobile/jc-mobile/Models/: ConnectionConfig.swift  Protocol.swift
jc-mobile/jc-mobile/Networking/: ConnectionManager.swift  WebSocketClient.swift
jc-mobile/jc-mobile/Notifications/: NotificationManager.swift
jc-mobile/jc-mobile/Views/: DashboardView.swift  ProjectSection.swift  QRScannerView.swift  SessionRow.swift  SettingsView.swift  UsageCardView.swift
jc-terminal/: Cargo.toml  README.md
jc-terminal/src/: colors.rs  input.rs  lib.rs  pty.rs  render.rs  terminal.rs  view.rs
scripts/: bundle.sh  claude-usage.sh  update-gpui-component.sh  update-outline-queries.sh
