[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
git2 = { version = "0.20", default-features = false }
gpui-component-assets = "0.5.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
alacritty_terminal = "0.25"
portable-pty = "0.9"
parking_lot = "0.12"
flume = "0.11"
notify = "7"
similar = "2"
