[workspace]
members = ["jc-core", "jc-terminal", "jc-app"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = { path = "vendor/gpui-component", features = ["tree-sitter-languages"] }
git2 = { version = "0.20", default-features = false }
gpui-component-assets = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
alacritty_terminal = "0.25"
portable-pty = "0.9"
parking_lot = "0.12"
flume = "0.11"
notify = "7"
similar = "2"
diffy = "0.4"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-md = "0.5"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tiny_http = "0.12"
ureq = { version = "3", features = ["json"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
sha2 = "0.10"
hex = "0.4"
fast_qr = "0.12"
tungstenite = "0.26"
rand = "0.8"
