[workspace]
members = ["jc-core", "jc-terminal", "jc-app"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# gpui and gpui-component are vendored in vendor/ so we can patch them:
# - gpui: InputRateTracker replaces the naive last_input_timestamp check that
#   caused continuous GPU frame presentation on any mouse movement (backport of
#   Zed PR #45369). See vendor/gpui/src/input_rate_tracker.rs.
# - gpui-component: patched for custom input/theme behaviors (see
#   scripts/update-gpui-component.sh and vendor/patches/).
gpui = "0.2.2"
gpui-component = { path = "vendor/gpui-component", features = ["tree-sitter-languages"] }
git2 = { version = "0.20", default-features = false }
gpui-component-assets = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
alacritty_terminal = "0.25"
portable-pty = "0.9"
parking_lot = "0.12"
flume = "0.11"
notify = "7"
similar = "2"
diffy = "0.4"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-md = "0.5"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tiny_http = "0.12"
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSSet", "NSDictionary", "NSEnumerator"] }
objc2-user-notifications = { version = "0.3", features = [
  "UNUserNotificationCenter", "UNNotificationContent", "UNNotificationRequest",
  "UNNotificationAction", "UNNotificationCategory", "UNNotificationSound",
  "UNNotificationResponse", "UNNotificationSettings",
] }

# Redirect all gpui references (including transitive deps like gpui-component)
# to our patched vendor copy.
[patch.crates-io]
gpui = { path = "vendor/gpui" }
