[package]
name = "jc-app"
version = "0.1.0"
edition.workspace = true

[dependencies]
jc-core = { path = "../jc-core" }
jc-terminal = { path = "../jc-terminal" }
gpui.workspace = true
gpui-component.workspace = true
serde_json.workspace = true
gpui-component-assets.workspace = true
clap.workspace = true
anyhow.workspace = true
libc = "0.2"
git2.workspace = true
notify.workspace = true
flume.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-md.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
diffy.workspace = true
objc2.workspace = true
objc2-app-kit.workspace = true
