[package]
name = "jc-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
flume.workspace = true
